--- a/MasterFarm/Web.config
+++ b/MasterFarm/Web.config
@@ -14,6 +14,7 @@
     <add key="RDS_PASSWORD" value="anu@123!"/>
     <add key="RDS_DATABASE" value="FarmManager"></add>
     <add key="RDS_HOSTNAME" value="NOIAN060SA-W1"/>
+    <add key="APP_STAGE" value="Beta"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
