--- a/MasterFarm/MasterFarm.csproj
+++ b/MasterFarm/MasterFarm.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
@@ -917,10 +917,6 @@
     <Content Include="custom\css\loginassets\plugins\jquery-validation\demo\tinymce\themes\simple\langs\en.js" />
     <Content Include="custom\css\loginassets\plugins\jquery-validation\demo\tinymce\themes\simple\skins\default\ui.css" />
     <Content Include="custom\css\loginassets\plugins\jquery-validation\demo\tinymce\tiny_mce.js" />
-    <Content Include="custom\css\loginassets\plugins\jquery-validation\dist\additional-methods.js" />
-    <Content Include="custom\css\loginassets\plugins\jquery-validation\dist\additional-methods.min.js" />
-    <Content Include="custom\css\loginassets\plugins\jquery-validation\dist\jquery.validate.js" />
-    <Content Include="custom\css\loginassets\plugins\jquery-validation\dist\jquery.validate.min.js" />
     <Content Include="custom\css\loginassets\plugins\jquery-validation\Gruntfile.js" />
     <Content Include="custom\css\loginassets\plugins\jquery-validation\lib\jquery-1.6.4.js" />
     <Content Include="custom\css\loginassets\plugins\jquery-validation\lib\jquery-1.7.2.js" />
